--- a/08-Pacotes-Modulos/08.01-modulos-pacotes/package.json
+++ b/08-Pacotes-Modulos/08.01-modulos-pacotes/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "teste",
-  "version": "1.0.0",
-  "description": "Batata",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "aula",
+    "version": "1.0.0",
+    "description": "Pão de baaatata",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC"
 }
