--- a/09-TypeScript/09.02-tipando-variaveis/package.json
+++ b/09-TypeScript/09.02-tipando-variaveis/package.json
@@ -1,7 +1,6 @@
 {
   "name": "0901-introducao",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc"
@@ -10,5 +9,6 @@
   "license": "ISC",
   "dependencies": {
     "typescript": "^4.1.4"
-  }
+  },
+  "description": ""
 }
